update + add images

--- a/week4/midterm_wireframe/styles.css
+++ b/week4/midterm_wireframe/styles.css
@@ -1,7 +1,7 @@
 body {
 	width: 100vw;
 	height: 100vh;
-	background-color: white;
+	background-color: #110d0a;
 	margin: 0rem;
 	overflow: hidden;
 }
