--- a/midterm/styles.css
+++ b/midterm/styles.css
@@ -21,7 +21,7 @@ body {
 	width: 40vmin;
 	height: 55vmin;
 	object-fit: cover;
-	object-position: center;
+	object-position: right;
 }
 
 /* mobile */
@@ -31,13 +31,14 @@ body {
 		flex-direction: column;
 		left: 50%;
 		top: 50%;
-		transform: translate(-50%, -10%);
-		padding: 1vmin;
+		transform: translate(-50%, 0);
+		gap: 4vmin;
 	}
 	
 	#image-scroll > .image {
-		width: 60vmin;
+		width: 70vmin;
 		height: 50vmin;
-		margin-bottom: 2vmin;
+		object-fit: cover;
+		object-position: bottom;
 	}
 }
