--- a/midterm/styles.css
+++ b/midterm/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 /* mobile */
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 	#image-scroll {
 		display: flex;
 		flex-direction: column;
