--- a/final/styles.css
+++ b/final/styles.css
@@ -1,3 +1,21 @@
 body {
     margin: 0; 
 }
+
+#scene {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+}
+
+.text-overlay {
+    position: absolute;
+    font-size: 24px;
+    color: #000;
+    opacity: 0;
+    transition: opacity 1s; /* Adjust the duration of the fade-in effect */
+}
+
+html {
+    scroll-behavior: smooth;
+}
